* In Employee entry screen, mark required fields as such (ErikH)
* Fix being unable to remove roles from user (SF 1395) (ErikH)
* Improved required input checking on form submit (SF 1382/GH 715) (ErikH)
* Fixed css making it difficult or impossible to save person records (Chris T)
* Fixed sudden bouncing to employee screen along with info loss (Chris T)

Chris T is Chris Travers
ErikH is Erik Huelsmann


Changelog for 1.4.13
* Account edit group can checkboxes and mark accounts obsolete (Chris T)
* Fixed time cards failing to save (GitHub bug 636) (Erik H)
* List COGS accounts under 'Default COGS' (instead of expense) (Erik H)
* Fix preprocessing Roles.sql was required in 1.3 (obsolete in 1.4) (Erik H)
* Fix entry, selection and listing of GIFI account codes (Erik H)
* Fix entity "Accounts" 'Save as' button (Erik H)
* Fix 'Business Type' not showing up in Contact Account tab (Erik H)
* Fix balance sheet CSV missing 'description' column content (Erik H)
* Fix can't delete draft transactions with reporting units (SF 1391) (Erik H)
* GIFI PNL reports are back.  (Chris T)
* Fix payment entry at the bottom of invoices (SF 1394) (Erik H)
* Some additional constraint checks for migrations from SL 2.8 (Erik H)

Erik H is Erik Huelsmann
Chris T is Chris Travers


Changelog for 1.4.12
* Updated German translation by Adrian v. Meibom <meibomberlin@googlemail.com>
* Fixed printing of purchase order due to SQL error (bug 1359) (Erik H)
* Don't show button for dis-allowed action in GL entry (bug 1355) (Erik H)
* Admin can't reset user's password due to SQL error (bug 1333) (Erik H)
* Fix dependency listing (include JSON) (bug 1347) (Erik H)
* Make setup.pl generate fewer warnings in the error logs (Erik H)
* Fix 'Save as' in contact account clobbering existing one (bug 1364) (Erik H)
* Fixed empty response causing some problems. (Chris T)
* Detect account heading graph loops and throw errors (Chris T)
* Fixed errors about missing employee.pm (Erik H)