@@ -9,6 +9,7 @@ Changelog for 1.4.14
 * Improved required input checking on form submit (SF 1382/GH 715) (ErikH)
 * Fixed css making it difficult or impossible to save person records (Chris T)
 * Fixed sudden bouncing to employee screen along with info loss (Chris T)
+* Fixed salutation and entity class not setting, entering person (Chris T)
 
 Chris T is Chris Travers
 ErikH is Erik Huelsmann
